✨ Implement custom Bontastic_Thermal printer firmware and replace adafruit

--- a/Bontastic/web/index.html
+++ b/Bontastic/web/index.html
@@ -565,7 +565,10 @@
                         { value: 2, label: 'inverse' },
                         { value: 4, label: 'strike' },
                         { value: 8, label: 'double width' },
-                        { value: 9, label: 'bold + double' }
+                        { value: 9, label: 'bold + double' },
+                        { value: 16, label: 'upside down' },
+                        { value: 17, label: 'upside + bold' },
+                        { value: 24, label: 'upside + double' }
                     ],
                     charsetOptions: [
                         { value: 0, label: 'USA' },
