🚀 add automatic upside down printing for images, add congress logo

--- a/Bontastic/web/index.html
+++ b/Bontastic/web/index.html
@@ -265,14 +265,14 @@
                             <label class="cursor-pointer">
                                 <input type="checkbox" value="dither" v-model="bitmapEffects" class="sr-only peer">
                                 <span
-                                    class="block px-3 py-2 font-mono text-sm border border-green-500/40 rounded-xl bg-black/60 text-green-200/90 peer-checked:border-green-400/70 peer-checked:bg-green-500/15">
+                                    class="block px-3 py-2 font-mono text-sm border border-[--color-secondary] rounded-xl bg-black/60 text-green-200/90 peer-checked:border-[--color-secondary] peer-checked:bg-[--color-secondary] ">
                                     dither
                                 </span>
                             </label>
                             <label class="cursor-pointer">
                                 <input type="checkbox" value="invert" v-model="bitmapEffects" class="sr-only peer">
                                 <span
-                                    class="block px-3 py-2 font-mono text-sm border border-green-500/40 rounded-xl bg-black/60 text-green-200/90 peer-checked:border-green-400/70 peer-checked:bg-green-500/15">
+                                    class="block px-3 py-2 font-mono text-sm border border-[--color-secondary] rounded-xl bg-black/60 text-green-200/90 peer-checked:border-[--color-secondary] peer-checked:bg-[--color-secondary] ">
                                     invert
                                 </span>
                             </label>
