--- a/Bontastic/web/index.html
+++ b/Bontastic/web/index.html
@@ -174,18 +174,18 @@
                     <h1 class="text-3xl md:text-4xl font-mono font-medium text-green-300">
                         BONTASTIC <<39C3 </h1>
                 </div>
-                <div class="flex flex-col items-end text-s font-mono uppercase text-green-300/80">
+                <div class="flex flex-col items-start text-s font-mono uppercase text-green-300/80">
                     <span>status :: {{ statusText }}</span>
                     <span>device :: {{ connected ? 'linked' : 'idle' }}</span>
                 </div>
             </div>
             <div class="flex flex-wrap gap-4 items-center">
                 <button @click="connect" :disabled="connecting || connected"
-                    class="px-6 py-2 font-mono border border-green-400/60 bg-green-500/10 hover:bg-green-500/20 text-green-200 rounded transition disabled:opacity-50 disabled:cursor-not-allowed">
+                    class="px-6 py-2 w-[170px] font-mono border border-green-400/60 bg-green-500/10 hover:bg-green-500/20 text-green-200 rounded transition disabled:opacity-50 disabled:cursor-not-allowed">
                     {{ connecting ? 'negotiating…' : 'establish link' }}
                 </button>
                 <button @click="disconnect" :disabled="!connected"
-                    class="px-6 py-2 font-mono border border-red-500/40 bg-red-500/10 hover:bg-red-500/20 text-red-300 rounded transition disabled:opacity-40 disabled:cursor-not-allowed">
+                    class="px-6 py-2 w-[170px] font-mono border border-red-500/40 bg-red-500/10 hover:bg-red-500/20 text-red-300 rounded transition disabled:opacity-40 disabled:cursor-not-allowed">
                     terminate
                 </button>
                 <span class="text-sm text-green-400/70">notify :: {{ notificationsEnabled ? 'on' : 'off' }}</span>
@@ -295,7 +295,7 @@
                     <div class="space-y-2">
                         <label class="text-xs text-green-400/70 uppercase">Preview</label>
                         <div class="border border-green-500/30 rounded bg-black/60 p-2 overflow-auto">
-                            <canvas ref="bitmapCanvas" class="block"></canvas>
+                            <canvas ref="bitmapCanvas" class="block max-w-full"></canvas>
                         </div>
                     </div>
                     <div class="space-y-2">
